# brandx

./: AGENTS.md  LICENSE  README.md  STRATEGY.md  pyproject.toml
docs/: config-reference.md
docs/brainstorms/: 2026-06-20-generic-engine-requirements.md  2026-06-20-identity-config-requirements.md  2026-06-20-install-distribution-requirements.md  2026-06-23-interactive-render-session-requirements.md
docs/design/: mockup-document.html  mockup-email.html  mockup-session.md
docs/plans/: 2026-06-20-001-feat-brandx-foundation-plan.md  2026-06-23-001-feat-interactive-render-session-plan.md
examples/: sample-note.md
src/brandx/: __init__.py  cli.py  clipboard.py  docsgen.py  initcmd.py  output.py  session.py  tui.py
src/brandx/config/: defaults.py  discovery.py  resolver.py  schema.py
src/brandx/render/: assets.py  callouts.py  document.py  email.py  pipeline.py  tasklists.py
tests/: conftest.py  test_assets.py  test_callouts.py  test_cli.py  test_discovery.py  test_docsgen.py  test_document_render.py  test_email_render.py  test_init.py  test_output.py  test_pipeline.py  test_resolver.py  test_schema.py  test_session.py  test_tasklists.py  test_tui.py
